// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`eslint A config missing file 1`] = `
{
  "canFix": false,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": false,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingNyc": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": false,
    "isUsingVue": false,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [],
  "fileContent": "",
  "fileName": "",
  "originalFileContent": "",
  "passed": [
    "has-no-xo-config-js-file",
  ],
  "warnings": [],
}
`;

exports[`eslint B config file empty 1`] = `
{
  "canFix": false,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": false,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingNyc": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": false,
    "isUsingVue": false,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [
    "has-no-xo-config-js-file",
    "does-not-have-eslint-recommended-rules-extend-eslint-recommended",
  ],
  "fileContent": "",
  "fileName": "",
  "originalFileContent": "",
  "passed": [
    "has-no-promise-plugin-require-eslint-7",
  ],
  "warnings": [
    "could-have-hardcore-rules-extend-hardcore",
    "could-have-eslint-recommended-rules-extend-eslint-recommended",
    "could-have-unicorn-rules-extend-plugin-unicorn-all",
    "current-eslintrc-json-has-only-15-of-the-77-custom-rules-in-repo-checker-eslintrc-json",
  ],
}
`;

exports[`eslint C config file empty for ts project 1`] = `
{
  "canFix": false,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": false,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingNyc": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": true,
    "isUsingVue": false,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [
    "has-no-xo-config-js-file",
  ],
  "fileContent": "",
  "fileName": "",
  "originalFileContent": "",
  "passed": [
    "has-no-promise-plugin-require-eslint-7",
    "has-a-disabled-explicit-function-return-type",
  ],
  "warnings": [
    "could-have-hardcore-rules-extend-hardcore",
    "could-have-eslint-recommended-rules-extend-eslint-recommended",
    "could-have-unicorn-rules-extend-plugin-unicorn-all",
    "current-eslintrc-json-has-only-1-of-the-77-custom-rules-in-repo-checker-eslintrc-json",
    "could-have-hardcore-typescript-rules-extend-hardcore-ts",
  ],
}
`;

exports[`eslint D config file empty for vue ts project 1`] = `
{
  "canFix": false,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": false,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingNyc": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": true,
    "isUsingVue": true,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [
    "has-no-xo-config-js-file",
    "does-not-have-hardcore-vue-rules-extend-hardcore-vue",
  ],
  "fileContent": "",
  "fileName": "",
  "originalFileContent": "",
  "passed": [
    "has-no-promise-plugin-require-eslint-7",
    "has-a-disabled-explicit-function-return-type",
  ],
  "warnings": [
    "could-have-hardcore-rules-extend-hardcore",
    "could-have-eslint-recommended-rules-extend-eslint-recommended",
    "could-have-unicorn-rules-extend-plugin-unicorn-all",
    "current-eslintrc-json-has-only-1-of-the-77-custom-rules-in-repo-checker-eslintrc-json",
    "could-have-vue-first-attribute-linebreak-off-vue-first-attribute-linebreak-off",
    "could-have-vue-html-closing-bracket-newline-off-vue-html-closing-bracket-newline-off",
    "could-have-vue-html-indent-off-vue-html-indent-off",
    "could-have-vue-html-self-closing-off-vue-html-self-closing-off",
    "could-have-vue-max-attributes-per-line-off-vue-max-attributes-per-line-off",
    "could-have-vue-no-multiple-template-root-off-vue-no-multiple-template-root-off",
    "could-have-vue-singleline-html-element-content-newline-off-vue-singleline-html-element-content-newline-off",
    "could-have-hardcore-typescript-rules-extend-hardcore-ts",
  ],
}
`;

exports[`eslint E config file empty for tailwind project 1`] = `
{
  "canFix": false,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": false,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingNyc": false,
    "isUsingShuutils": false,
    "isUsingTailwind": true,
    "isUsingTypescript": false,
    "isUsingVue": false,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [
    "has-no-xo-config-js-file",
    "does-not-have-tailwind-rules-extend-plugin-tailwindcss-recommended",
    "does-not-have-eslint-recommended-rules-extend-eslint-recommended",
  ],
  "fileContent": "",
  "fileName": "",
  "originalFileContent": "",
  "passed": [
    "has-no-promise-plugin-require-eslint-7",
  ],
  "warnings": [
    "could-have-hardcore-rules-extend-hardcore",
    "could-have-eslint-recommended-rules-extend-eslint-recommended",
    "could-have-unicorn-rules-extend-plugin-unicorn-all",
    "current-eslintrc-json-has-only-15-of-the-77-custom-rules-in-repo-checker-eslintrc-json",
  ],
}
`;

exports[`eslint F config partial file for js project 1`] = `
{
  "canFix": false,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": false,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingNyc": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": false,
    "isUsingVue": false,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [
    "has-no-xo-config-js-file",
  ],
  "fileContent": "{
    \\"extends\\": [
      \\"eslint:recommended\\",
      \\"plugin:unicorn/recommended\\"
    ],
    \\"plugins\\": [
      \\"unicorn\\"
    ],
    \\"rules\\": {}
  }",
  "fileName": "",
  "originalFileContent": "",
  "passed": [
    "has-eslint-recommended-rules-extend",
    "has-no-promise-plugin-require-eslint-7",
    "has-eslint-recommended-rules-extend",
  ],
  "warnings": [
    "could-have-hardcore-rules-extend-hardcore",
    "could-have-unicorn-rules-extend-plugin-unicorn-all",
    "current-eslintrc-json-has-only-15-of-the-77-custom-rules-in-repo-checker-eslintrc-json",
  ],
}
`;

exports[`eslint G config partial file for ts project 1`] = `
{
  "canFix": false,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": false,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingNyc": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": true,
    "isUsingVue": false,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [
    "has-no-xo-config-js-file",
  ],
  "fileContent": "{
    \\"extends\\": [
      \\"eslint:recommended\\",
      \\"plugin:@typescript-eslint/recommended\\",
      \\"plugin:unicorn/recommended\\"
    ],
    \\"rules\\": {}
  }",
  "fileName": "",
  "originalFileContent": "",
  "passed": [
    "has-eslint-recommended-rules-extend",
    "has-no-promise-plugin-require-eslint-7",
    "has-a-disabled-explicit-function-return-type",
  ],
  "warnings": [
    "could-have-hardcore-rules-extend-hardcore",
    "could-have-unicorn-rules-extend-plugin-unicorn-all",
    "current-eslintrc-json-has-only-1-of-the-77-custom-rules-in-repo-checker-eslintrc-json",
    "could-have-hardcore-typescript-rules-extend-hardcore-ts",
  ],
}
`;

exports[`eslint H config partial file for vue ts project 1`] = `
{
  "canFix": false,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": false,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingNyc": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": true,
    "isUsingVue": true,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [
    "has-no-xo-config-js-file",
    "does-not-have-hardcore-vue-rules-extend-hardcore-vue",
  ],
  "fileContent": "{
    \\"extends\\": [
      \\"eslint:recommended\\",
      \\"plugin:@typescript-eslint/recommended\\",
      \\"plugin:unicorn/recommended\\",
      \\"plugin:vue/vue3-recommended\\"
    ],
    \\"parser\\": \\"vue-eslint-parser\\",
    \\"parserOptions\\": {
      \\"parser\\": \\"@typescript-eslint/parser\\",
      \\"ecmaVersion\\": 2021,
      \\"sourceType\\": \\"module\\"
    },
    \\"plugins\\": [
      \\"@typescript-eslint\\",
      \\"unicorn\\"
    ],
    \\"rules\\": {}
  }",
  "fileName": "",
  "originalFileContent": "",
  "passed": [
    "has-eslint-recommended-rules-extend",
    "has-no-promise-plugin-require-eslint-7",
    "has-a-disabled-explicit-function-return-type",
  ],
  "warnings": [
    "could-have-hardcore-rules-extend-hardcore",
    "could-have-unicorn-rules-extend-plugin-unicorn-all",
    "current-eslintrc-json-has-only-1-of-the-77-custom-rules-in-repo-checker-eslintrc-json",
    "could-have-vue-first-attribute-linebreak-off-vue-first-attribute-linebreak-off",
    "could-have-vue-html-closing-bracket-newline-off-vue-html-closing-bracket-newline-off",
    "could-have-vue-html-indent-off-vue-html-indent-off",
    "could-have-vue-html-self-closing-off-vue-html-self-closing-off",
    "could-have-vue-max-attributes-per-line-off-vue-max-attributes-per-line-off",
    "could-have-vue-no-multiple-template-root-off-vue-no-multiple-template-root-off",
    "could-have-vue-singleline-html-element-content-newline-off-vue-singleline-html-element-content-newline-off",
    "could-have-hardcore-typescript-rules-extend-hardcore-ts",
  ],
}
`;

exports[`eslint I up to date config file for vue ts project 1`] = `
{
  "canFix": false,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": false,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingNyc": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": true,
    "isUsingVue": true,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [
    "has-no-xo-config-js-file",
    "does-not-have-hardcore-vue-rules-extend-hardcore-vue",
  ],
  "fileContent": "{
    \\"extends\\": [
      \\"plugin:vue/vue3-recommended\\",
      \\"eslint:recommended\\",
      \\"@vue/typescript/recommended\\",
      \\"plugin:unicorn/recommended\\"
    ],
    \\"parserOptions\\": {
      \\"ecmaVersion\\": 2021
    },
    \\"plugins\\": [
      \\"html\\",
      \\"unicorn\\"
    ],
  }",
  "fileName": "",
  "originalFileContent": "",
  "passed": [
    "has-eslint-recommended-rules-extend",
    "has-no-promise-plugin-require-eslint-7",
    "has-a-disabled-explicit-function-return-type",
  ],
  "warnings": [
    "could-have-hardcore-rules-extend-hardcore",
    "could-have-unicorn-rules-extend-plugin-unicorn-all",
    "could-have-vue-first-attribute-linebreak-off-vue-first-attribute-linebreak-off",
    "could-have-vue-html-closing-bracket-newline-off-vue-html-closing-bracket-newline-off",
    "could-have-vue-html-indent-off-vue-html-indent-off",
    "could-have-vue-html-self-closing-off-vue-html-self-closing-off",
    "could-have-vue-max-attributes-per-line-off-vue-max-attributes-per-line-off",
    "could-have-vue-no-multiple-template-root-off-vue-no-multiple-template-root-off",
    "could-have-vue-singleline-html-element-content-newline-off-vue-singleline-html-element-content-newline-off",
    "could-have-hardcore-typescript-rules-extend-hardcore-ts",
  ],
}
`;

exports[`eslint J config file with no rules 1`] = `
{
  "canFix": false,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": false,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingNyc": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": false,
    "isUsingVue": false,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [
    "has-no-xo-config-js-file",
    "eslintrc-json-does-not-have-eslint-recommended-rules-extend-eslint-recommended",
  ],
  "fileContent": "{
  \\"env\\": {
    \\"browser\\": false
  },
  \\"settings\\": {
    \\"repo-faker\\": {
      \\"hardcore/ts\\": \\"\\"
    }
  }
}
",
  "fileName": ".eslintrc.json",
  "originalFileContent": "{
  \\"env\\": {
    \\"browser\\": false
  },
  \\"settings\\": {
    \\"repo-faker\\": {
      \\"hardcore/ts\\": \\"\\"
    }
  }
}
",
  "passed": [
    "eslintrc-json-has-hardcore-rules-extend",
    "eslintrc-json-has-no-promise-plugin-require-eslint-7",
  ],
  "warnings": [
    "eslintrc-json-could-have-unicorn-rules-extend-plugin-unicorn-all",
    "eslintrc-json-current-eslintrc-json-has-only-15-of-the-77-custom-rules-in-repo-checker-eslintrc-json",
  ],
}
`;

exports[`eslint K config file with just rules (no override) 1`] = `
{
  "canFix": false,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": false,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingNyc": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": false,
    "isUsingVue": false,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [
    "has-no-xo-config-js-file",
    "eslintrc-json-does-not-have-eslint-recommended-rules-extend-eslint-recommended",
  ],
  "fileContent": "{
  \\"env\\": {
    \\"browser\\": false
  },
  \\"rules\\": {
    \\"no-console\\": \\"off\\"
  },
  \\"settings\\": {
    \\"repo-faker\\": {
      \\"hardcore/ts\\": \\"\\"
    }
  }
}
",
  "fileName": ".eslintrc.json",
  "originalFileContent": "{
  \\"env\\": {
    \\"browser\\": false
  },
  \\"rules\\": {
    \\"no-console\\": \\"off\\"
  },
  \\"settings\\": {
    \\"repo-faker\\": {
      \\"hardcore/ts\\": \\"\\"
    }
  }
}
",
  "passed": [
    "eslintrc-json-has-hardcore-rules-extend",
    "eslintrc-json-has-no-promise-plugin-require-eslint-7",
  ],
  "warnings": [
    "eslintrc-json-could-have-unicorn-rules-extend-plugin-unicorn-all",
    "eslintrc-json-current-eslintrc-json-has-only-16-of-the-77-custom-rules-in-repo-checker-eslintrc-json",
  ],
}
`;
